// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-4-70"
  >
    <div
      editPath="/suppliers/1234/avatar"
      imageUrl="/foo/url"
      name="foo-name"
    >
      Avatar
    </div>
    <h1
      className="MuiTypography-root-92 MuiTypography-display1-96"
      style={
        Object {
          "marginBottom": 16,
          "marginTop": 16,
        }
      }
    >
      foo-name
    </h1>
    <div
      to="/suppliers/1234/edit"
    >
      <h3
        className="MuiTypography-root-92 MuiTypography-subheading-99"
      >
        Editar perfil
      </h3>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-8-74"
  >
    <div
      className="MuiPaper-root-117 MuiPaper-elevation2-121 MuiPaper-rounded-118 MuiCard-root-116"
    >
      <div
        className="MuiCardContent-root-144"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h2
            className="MuiTypography-root-92 MuiTypography-title-98"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Descrição
            :
          </h2>
           
          <h3
            className="MuiTypography-root-92 MuiTypography-subheading-99"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            foo-description
          </h3>
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h2
            className="MuiTypography-root-92 MuiTypography-title-98"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Telefone
            :
          </h2>
           
          <h3
            className="MuiTypography-root-92 MuiTypography-subheading-99"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            0000-0000
          </h3>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  />
  <div
    current={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
    currentUser={
      Object {
        "id": 1234,
        "suppliers": Array [
          Object {
            "id": 1234,
          },
        ],
      }
    }
    id={1234}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    supplier={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
  >
    Addresses
  </div>
</div>
`;

exports[`with materials renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-4-70"
  >
    <div
      editPath={undefined}
      imageUrl="/foo/url"
      name="foo-name"
    >
      Avatar
    </div>
    <h1
      className="MuiTypography-root-92 MuiTypography-display1-96"
      style={
        Object {
          "marginBottom": 16,
          "marginTop": 16,
        }
      }
    >
      foo-name
    </h1>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-8-74"
  >
    <div
      className="MuiPaper-root-117 MuiPaper-elevation2-121 MuiPaper-rounded-118 MuiCard-root-116"
    >
      <div
        className="MuiCardContent-root-144"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h2
            className="MuiTypography-root-92 MuiTypography-title-98"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Descrição
            :
          </h2>
           
          <h3
            className="MuiTypography-root-92 MuiTypography-subheading-99"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            foo-description
          </h3>
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <p
            className="MuiTypography-root-92 MuiTypography-body1-101 MuiTypography-colorInherit-111"
          >
            <div
              style={
                Object {
                  "textDecoration": "none",
                }
              }
              to={
                Object {
                  "pathname": "/auth/sign-up",
                  "state": Object {
                    "referrer": "/foo",
                  },
                }
              }
            >
              Cadastre-se
            </div>
             
            <span>
              para ver o contato do fornecedor.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  >
    <div
      cellHeight={360}
      className="MuiGrid-container-1 MuiGrid-spacing-xs-8-22"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
      >
        <div
          className="Ratio "
          style={
            Object {
              "display": "block",
              "overflow": "hidden ",
            }
          }
        >
          <div
            className="Ratio-ratio "
            style={
              Object {
                "height": 0,
                "paddingTop": "66.66666666666667%",
                "position": "relative",
                "width": "100%",
              }
            }
          >
            <div
              className="Ratio-content "
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                to="/1"
              >
                <img
                  alt={undefined}
                  src={undefined}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "background": "rgba(0, 0, 0, 0.6)",
                    "bottom": 0,
                    "color": "white",
                    "height": 90,
                    "left": 0,
                    "padding": 20,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "float": "left",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "color": "white",
                        "display": "block",
                        "textDecoration": "none",
                      }
                    }
                    to="/1"
                  >
                    <h3
                      className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
      >
        <div
          className="Ratio "
          style={
            Object {
              "display": "block",
              "overflow": "hidden ",
            }
          }
        >
          <div
            className="Ratio-ratio "
            style={
              Object {
                "height": 0,
                "paddingTop": "66.66666666666667%",
                "position": "relative",
                "width": "100%",
              }
            }
          >
            <div
              className="Ratio-content "
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                to="/2"
              >
                <img
                  alt={undefined}
                  src={undefined}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "background": "rgba(0, 0, 0, 0.6)",
                    "bottom": 0,
                    "color": "white",
                    "height": 90,
                    "left": 0,
                    "padding": 20,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "float": "left",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "color": "white",
                        "display": "block",
                        "textDecoration": "none",
                      }
                    }
                    to="/2"
                  >
                    <h3
                      className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
      >
        <div
          className="Ratio "
          style={
            Object {
              "display": "block",
              "overflow": "hidden ",
            }
          }
        >
          <div
            className="Ratio-ratio "
            style={
              Object {
                "height": 0,
                "paddingTop": "66.66666666666667%",
                "position": "relative",
                "width": "100%",
              }
            }
          >
            <div
              className="Ratio-content "
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                to="/3"
              >
                <img
                  alt={undefined}
                  src={undefined}
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                />
              </div>
              <div
                style={
                  Object {
                    "background": "rgba(0, 0, 0, 0.6)",
                    "bottom": 0,
                    "color": "white",
                    "height": 90,
                    "left": 0,
                    "padding": 20,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "float": "left",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "color": "white",
                        "display": "block",
                        "textDecoration": "none",
                      }
                    }
                    to="/3"
                  >
                    <h3
                      className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    current={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "materials": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
    id={1234}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    supplier={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "materials": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
        ],
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
  >
    Addresses
  </div>
</div>
`;

exports[`without currentUser renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-32-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-4-70"
  >
    <div
      editPath={undefined}
      imageUrl="/foo/url"
      name="foo-name"
    >
      Avatar
    </div>
    <h1
      className="MuiTypography-root-92 MuiTypography-display1-96"
      style={
        Object {
          "marginBottom": 16,
          "marginTop": 16,
        }
      }
    >
      foo-name
    </h1>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-8-74"
  >
    <div
      className="MuiPaper-root-117 MuiPaper-elevation2-121 MuiPaper-rounded-118 MuiCard-root-116"
    >
      <div
        className="MuiCardContent-root-144"
      >
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <h2
            className="MuiTypography-root-92 MuiTypography-title-98"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            Descrição
            :
          </h2>
           
          <h3
            className="MuiTypography-root-92 MuiTypography-subheading-99"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            foo-description
          </h3>
        </div>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <p
            className="MuiTypography-root-92 MuiTypography-body1-101 MuiTypography-colorInherit-111"
          >
            <div
              style={
                Object {
                  "textDecoration": "none",
                }
              }
              to={
                Object {
                  "pathname": "/auth/sign-up",
                  "state": Object {
                    "referrer": "/foo",
                  },
                }
              }
            >
              Cadastre-se
            </div>
             
            <span>
              para ver o contato do fornecedor.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  />
  <div
    current={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
    id={1234}
    location={
      Object {
        "pathname": "/foo",
      }
    }
    supplier={
      Object {
        "description": "foo-description",
        "id": 1234,
        "imageUrl": "/foo/url",
        "name": "foo-name",
        "phone": "0000-0000",
        "userId": 1234,
      }
    }
  >
    Addresses
  </div>
</div>
`;
